@@ -50,6 +50,7 @@ Release 0.20.2 - Unreleased
    HBASE-1947  If HBase starts/stops often in less than 24 hours, 
                you end up with lots of store files
    HBASE-1867  Tool to regenerate an hbase table from the data files
+   HBASE-1829  Make use of start/stop row in TableInputFormat
 
 Release 0.20.1 - Released October 12th, 2009
   INCOMPATIBLE CHANGES
